force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/MPM4_BASE__TH_TimeEntry__c.object-meta.xml
<CustomObject>
    <description>The Time Entry object contains information about a weeks worth of time entries for a given record.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>