force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/fields/MPM4_BASE__Case__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>