force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/fields/MPM4_BASE__Comments__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>