force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/fields/MPM4_BASE__External_Reference__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__External_Reference__c</fullName>
    <externalId>true</externalId>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>