force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/fields/MPM4_BASE__Object_ID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Object_ID__c</fullName>
    <label>Lookup ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>