force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/fields/MPM4_BASE__Status__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>