force-app/main/default/objects/MPM4_BASE__TH_TimeEntry__c/listViews/MPM4_BASE__All.listView-meta.xml
<ListView>
    <fullName>MPM4_BASE__All</fullName>
    <columns>NAME</columns>
    <columns>MPM4_BASE__Approve__c</columns>
    <columns>MPM4_BASE__Deny__c</columns>
    <columns>MPM4_BASE__Comments__c</columns>
    <columns>MPM4_BASE__Status__c</columns>
    <columns>MPM4_BASE__Subject__c</columns>
    <columns>MPM4_BASE__Object_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>